added first course

--- a/data/pages.yml
+++ b/data/pages.yml
@@ -1,26 +1,20 @@
-- title: People
-  url: people
+- title: Faculty
+  url: faculty
   sub_pages:
-    - title: Personnel
+    - title: Faculty Overview
       url: overview
+- title: Curriculum
+  url: curriculum
+  sub_pages:
+    - title: Course List
+      url: list
 - title: Research
   url: research
   sub_pages:
     - title: Research Overview
       url: overview
-    - title: From Sensation to Action
-      url: sensation-to-action
-    - title: Descending Motor Control
-      url: descending-motor-control
-    - title: Biomechanics of Locomotion
-      url: biomechanics-of-locomotion
-- title: Publications
-  url: publications
-  sub_pages:
-    - title: Publications List
-      url: list
-- title: Positions
-  url: positions
+- title: News
+  url: news
   sub_pages: 
-    - title: Open Positions
-      url: open
+    - title: Recent News
+      url: recent
